# a9nloader-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: gui.rs  loader.rs  main.rs  print.rs  screen.rs  util.rs
src/gui/: bmp.rs  console.rs
src/loader/: boot_info.rs  elf.rs  file_system.rs  frame_buffer_info.rs  loader.rs  memory.rs
src/screen/: screen.rs  vga_screen.rs
tools/: OVMF_CODE.fd  OVMF_VARS.fd  OVMF_VARS_RW.fd  make_bmp.sh  run_qemu.sh
tools/EFI/BOOT/: BOOTX64.EFI
